[package]
name = "rhttp"
version = "0.1.0"
edition = "2021"

[lib]
name = "rhttp"
path = "src/lib.rs"


# [[bin]]
# name = "rhttp"
# path = "src/bin.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
env_logger = "0.9.1"
log = "0.4.17"
rustls = "0.20.6"
