[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
env_logger = "0.9.1"
log = "0.4.17"
rustls = "0.20.6"
macros = { path= "../macros" }
serde_json = "1.0.85"
serde = { version = "1.0.145", features = ["derive"] }
httparse = "1.8.0"
hyper = "0.14.20"
futures-executor = "0.3.24"
bincode = "1.3.3"
serde_urlencoded = "0.7.1"